--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,10 @@
             ],
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/font-awesome/css/font-awesome.css"
+
+
               
             ],
             "scripts": [
